--- a/honey/package.json
+++ b/honey/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.5",
     "@types/react-router-dom": "^5.3.3",
     "dayjs": "^1.11.13",
